# vibe-writting-for-fun

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  cli.sh  start.sh  start_agent_service.sh
ai-agent-core/: README.md  main.py  pyproject.toml  requirements.txt  run_web.py  test_fix.py  test_full_flow.py  test_prompt.py
ai-agent-core/src/: main.py
ai-agent-core/src/agent/: core.py
ai-agent-core/src/capability/: tool_registry.py
ai-agent-core/src/events/: event_types.py
ai-agent-core/src/llm/: kimi.py
ai-agent-core/src/storage/: repository.py
ai-agent-core/src/tools/: novel_tools.py  outline_tools.py
ai-agent-core/src/ui/: cli.py  commands.py
ai-agent-core/src/web/: app.py
ai-agent-web/backend/: .env.example  .gitignore  pyproject.toml
ai-agent-web/backend/app/: main.py
ai-agent-web/backend/data/: web.db
backend/: .coverage  pyproject.toml
backend/app/: api_service.py  cli_main.py  main.py
backend/app/agent/: context_compressor.py  core.py  session.py
backend/app/api/: auth.py  novels.py  reviews.py  websocket.py
backend/app/capability/: skill_loader.py  subagent_manager.py  task_manager.py  tool_registry.py
backend/app/cli/: app.py  commands.py  display.py  input.py
backend/app/core/: config.py  deps.py  paths.py  security.py  skill_paths.py
backend/app/db/: base.py  init.py
backend/app/events/: event_bus.py  event_types.py
backend/app/llm/: anthropic_provider.py  config.py  kimi.py  openai_provider.py  provider.py
backend/app/memory/: __init__.py  event_recorder.py  repository.py  service.py
backend/app/models/: novel.py  user.py
backend/app/services/: agent_bridge.py  agent_wrapper.py  simple_ai.py  web_agent.py
backend/app/storage/: session_store.py
backend/app/tools/: __init__.py  chapter_tools.py  (+7 more)
backend/config/: llm.yaml
backend/skills/: chapter-writer.md  character-designer.md  content-reviewer.md  outline-generator.md  progress-summarizer.md  requirement-confirmer.md  skill-curator.md
backend/tests/: conftest.py  test_agent_core.py  test_agent_runtime_tools.py  test_anthropic_provider.py  test_cli.py  test_context_compressor.py  test_events.py  test_file_tools.py  test_llm_config.py  test_memory_repository.py  test_memory_service.py  test_memory_tools.py  test_openai_provider.py  test_p1_regressions.py  test_prompt_input.py  test_search_tools.py  test_session.py  test_skill_loader.py  test_subagent_manager.py  test_task_manager.py  test_tools.py
(+44 files in other folders)
